<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="102dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@color/colorPrimary" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:text="DADOS"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="200dp"
                android:layout_height="33dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="NOME:"
                android:textAlignment="textEnd"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/regnome"
                tools:layout_editor_absoluteY="233dp" />

            <TextView
                android:id="@+id/regnome"
                android:layout_width="200dp"
                android:layout_height="33dp"
                android:layout_weight="1"
                android:text="@string/regnome"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="203dp"
                tools:layout_editor_absoluteY="233dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="200dp"
                android:layout_height="33dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="SOBRENOME:"
                android:textAlignment="textEnd"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/regsobrenome"
                android:layout_width="200dp"
                android:layout_height="33dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/regsobrenome"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/regformação"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textView2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="200dp"
                android:layout_height="33dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="FORMAÇÃO:"
                android:textAlignment="textEnd"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/textView4"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/regformação"
                android:layout_width="200dp"
                android:layout_height="33dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/regformação"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/regemail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="200dp"
                android:layout_height="33dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="EMAIL:"
                android:textAlignment="textEnd"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/textView5"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/regemail"
                android:layout_width="200dp"
                android:layout_height="33dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/regemail"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/regtelefone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView4" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="200dp"
                android:layout_height="33dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="TELEFONE:"
                android:textAlignment="textEnd"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/textView6"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/regtelefone"
                android:layout_width="200dp"
                android:layout_height="33dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/regtelefone"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/regdata"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="200dp"
                android:layout_height="52dp"
                android:layout_marginBottom="112dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="DATA DE NASCIMENTO:"
                android:textAlignment="textEnd"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/regdata"
                android:layout_width="200dp"
                android:layout_height="52dp"
                android:layout_marginBottom="112dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/regdata"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textView6" />

        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>